emacs.d/backup/#!Users!naokiosako!TA!checker!error#
File "./R5/9700/example03-05-02.py", line 1
    print("abc"+"cde+"def"+"hig")
                        ^
SyntaxError: invalid syntax
  File "./R5/9703/example03-09-01.py", line 4
    print("こんにちは。今日の晩ご飯は何ですか?")　# 1行目の表示
                               ^
SyntaxError: invalid character in identifier
  File "./R5/9713/example03-01-01.py", line 1
    Python 3.7.0 (default, Jun 28 2018, 08:04:48) [MSC v.1912 64 bit (AMD64)] on win32
             ^
SyntaxError: invalid syntax
  File "./R5/9715/example03-07-05.py", line 3
    print("こんにちは。今日の晩ご飯は何でしたか？￥
                               ^
SyntaxError: EOL while scanning string literal
  File "./R5/9715/example03-07-06.py", line 3
    print("こんにちは。今日の晩ご飯は何ですか？, end="")
                                      ^
SyntaxError: EOL while scanning string literal
  File "./R5/9716/example03-09-01.py", line 5
    print("こんにちは。今日の晩ご飯はなんでしたか？")　# 1行目の表示
                                 ^
SyntaxError: invalid character in identifier
  File "./R5/9720/example03-01-01.py", line 1
    Python 3.7.0 (default, Jun 28 2018, 08:04:48) [MSC v.1912 64 bit (AMD64)] on win32
             ^
SyntaxError: invalid syntax
  File "./R5/9720/example03-04-02.py", line 1
    print("
          ^
SyntaxError: EOL while scanning string literal
  File "./R5/9720/example03-07-06.py", line 4
    ("おいしかったですか？", end="")
                      ^
SyntaxError: invalid syntax
  File "./R5/9720/example03-09-01.py", line 4
    print("こんにちは。今日の晩ご飯は何でしたか？") 　#１行目の表示
                                 ^
SyntaxError: invalid character in identifier
Traceback (most recent call last):
  File "./R5/9723/example03-01-01.py", line 8, in <module>
    print("abc"+123)
TypeError: can only concatenate str (not "int") to str
  File "./R5/9725/example03-07-01.py", line 3
    print("こんにちは。今日のご飯はなんでしたか？
                              ^
SyntaxError: EOL while scanning string literal
  File "./R5/9727/example03-01-01.py", line 1
    Python 3.7.0 (default, Jun 28 2018, 08:04:48) [MSC v.1912 64 bit (AMD64)] on win32
             ^
SyntaxError: invalid syntax
  File "./R5/9727/example03-04-01.py", line 1
    Python 3.7.0 (default, Jun 28 2018, 08:04:48) [MSC v.1912 64 bit (AMD64)] on win32
             ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "./R5/9728/example03-05-02.py", line 1, in <module>
    print("abc"+"cde"+"def"++"hig")
TypeError: bad operand type for unary +: 'str'